Bumped up padding to prevent cutoff on some letters.

--- a/assets/css/v2/bus_shelter/departures/destination.scss
+++ b/assets/css/v2/bus_shelter/departures/destination.scss
@@ -11,7 +11,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding-bottom: 5px;
+  padding-bottom: 6px;
 }
 
 .departure-destination__variation {
